--- a/Examen3/WebApp/appsettings.json
+++ b/Examen3/WebApp/appsettings.json
@@ -1,8 +1,6 @@
 {
   "ConnectionStrings": {
-    "Conn": "Data Source=LAPTOP-7QSI25Q0; Initial Catalog=Examen3BD; Integrated Security=True;"
-
-
+    "Conn": "Data Source=LAPTOP-TK7R86K2;Initial Catalog=Examen3;User Id=Dev;Password=Asdf_1234;"
   },
   "Logging": {
     "LogLevel": {
