--- a/Examen3/WebApp/Properties/launchSettings.json
+++ b/Examen3/WebApp/Properties/launchSettings.json
@@ -1,10 +1,11 @@
 ﻿{
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:6945",
-      "sslPort": 44309
+      "applicationUrl": "http://localhost:17519",
+      "sslPort": 44325
     }
   },
   "profiles": {
